--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "date-fns": "^2.30.0",
+    "jose": "^4.14.4",
+    "nanoid": "^4.0.2",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
